tests/error/modifier_errors/flag_dagger_assign.err
Error: Invalid expression in dagger (at $FILE:6:4)
  | 
4 | @guppy(dagger=True)
5 | def test() -> None:
6 |     x = 3
  |     ^^^^^ Assignment found in a dagger context

Guppy compilation failed due to 1 previous error
